improved async config, added thread-safety to race cache, rewrote tests for RaceService and RaceCache